--- a/trailer-tracker.cabal
+++ b/trailer-tracker.cabal
@@ -23,3 +23,5 @@ executable trailer-tracker
   build-depends:       base   == 4.6.*
                      , heist  >= 0.11.0.1
                      , snap   >= 0.11.2
+                     , lens   >= 3.7.0.1
+
