--- a/trailer-tracker.cabal
+++ b/trailer-tracker.cabal
@@ -20,8 +20,9 @@ executable trailer-tracker
   hs-source-dirs:      src
   main-is:             Main.hs
   -- other-modules:       
-  build-depends:       base   == 4.6.*
-                     , heist  >= 0.11.0.1
-                     , snap   >= 0.11.2
-                     , lens   >= 3.7.0.1
+  build-depends:       base         == 4.6.*
+                     , heist        >= 0.11.0.1
+                     , snap         >= 0.11.2
+                     , snap-core    >= 0.9.3.1
+                     , lens         >= 3.7.0.1
 
