--- a/trailer-tracker.cabal
+++ b/trailer-tracker.cabal
@@ -27,6 +27,7 @@ executable trailer-tracker
 --                   , snap-extras  >= 0.4
                      , lens         >= 3.7.0.1
 --                   , text         >= 0.11
+                     , uuid         >= 1.2.9
   extensions: OverloadedStrings
             , TemplateHaskell
 --          , FlexibleInstances
