--- a/trailer-tracker.cabal
+++ b/trailer-tracker.cabal
@@ -24,7 +24,7 @@ executable trailer-tracker
                      , heist        >= 0.11.0.1
                      , snap         >= 0.11.2
                      , snap-core    >= 0.9.3.1
---                   , snap-extras  >= 0.4
+                     , snap-extras  >= 0.4
                      , lens         >= 3.7.0.1
 --                   , text         >= 0.11
                      , uuid         >= 1.2.9
