--- a/trailer-tracker.cabal
+++ b/trailer-tracker.cabal
@@ -21,11 +21,9 @@ executable trailer-tracker
   main-is:             Main.hs
   -- other-modules:       
   build-depends:       base         == 4.6.*
-                     , heist        >= 0.11.0.1
-                     , snap         >= 0.11.2
-                     , snap-core    >= 0.9.3.1
-                     , snap-extras  >= 0.4
-                     , lens         >= 3.7.0.1
+                     , happstack    >= 7.0.1
+                     , blaze-html   >= 0.6.1.1
+--                   , lens         >= 3.7.0.1
 --                   , text         >= 0.11
                      , uuid         >= 1.2.9
   extensions: OverloadedStrings
